--- a/css/media.css
+++ b/css/media.css
@@ -1,4 +1,4 @@
-/*---------------------- Media Queries-------------- */
+/*---------------------- 'Media Queries'-------------- */
 
 /* 992- 1200px */
 @media screen and (max-width: 1200px) {
